# g4python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cmake
cmake/: Geant4Config.cmake  geant4pyCommon.cmake
cmake/Modules/: FindGeant4.cmake  FindPybind11.cmake
examples/emplot/: README.md  emplot.ipynb
examples/exampleB1/: CMakeLists.txt  README.md  exampleB1.ipynb
examples/exampleB1/geomB1/: pygeomB1.cc
examples/phantom_dose/: CMakeLists.txt  README.md  phantomdose.ipynb  scoring.mac
source/: CMakeLists.txt
source/digits_hits/: CMakeLists.txt  pyG4ScoringManager.cc  pyG4VSensitiveDetector.cc  pymodG4digits_hits.cc
source/event/: CMakeLists.txt  particlegun.h  pyG4ClassificationOfNewTrack.cc  pyG4Event.cc  pyG4EventManager.cc  pyG4ParticleGun.cc  pyG4StackManager.cc  pyG4UserEventAction.cc  pyG4UserStackingAction.cc  pyParticleGun.cc  pyParticleGunGenerator.cc  pymodG4event.cc
source/gdml/: CMakeLists.txt  pyG4GDMLParser.cc  pymodG4g4gdml.cc
source/geometry/: CMakeLists.txt  pyG4BooleanSolid.cc  pyG4Box.cc  pyG4ChordFinder.cc  pyG4Cons.cc  pyG4Ellipsoid.cc  pyG4EllipticalCone.cc  pyG4EllipticalTube.cc  pyG4Field.cc  pyG4FieldManager.cc  pyG4GeometryManager.cc  pyG4Hype.cc  pyG4IntersctionSolid.cc  pyG4LogicalVolume.cc  pyG4MagneticField.cc  pyG4Navigator.cc  pyG4Orb.cc  pyG4PVPlacement.cc  pyG4PVReplica.cc  pyG4Para.cc  pyG4Polycone.cc  pyG4Polyhedra.cc  pyG4Region.cc  pyG4Sphere.cc  pyG4SubtractionSolid.cc  pyG4Tet.cc  pyG4Torus.cc  pyG4TouchableHistory.cc  pyG4TransportationManager.cc  pyG4Trap.cc  pyG4Trd.cc  pyG4Tubs.cc  pyG4TwistedBox.cc  pyG4TwistedTrap.cc  pyG4TwistedTrd.cc  pyG4TwistedTubs.cc  pyG4UniformMagField.cc  pyG4UnionSolid.cc  pyG4VPhysicalVolume.cc  pyG4VSolid.cc  (+1 more)
source/global/: CMakeLists.txt  G4PyCoutDestination.cc  G4PyCoutDestination.hh  pyG4ApplicationState.cc  pyG4Exception.cc  pyG4ExceptionHandler.cc  pyG4ExceptionSeverity.cc  pyG4RandomDirection.cc  pyG4StateManager.cc  pyG4String.cc  pyG4ThreeVector.cc  pyG4Timer.cc  pyG4Transform3D.cc  pyG4TwoVector.cc  pyG4UnitsTable.cc  pyG4UserLimits.cc  pyG4Version.cc  pyRandomEngines.cc  pyRandomize.cc  pygeomdefs.cc  pyglobals.cc  pymodG4global.cc
source/graphics_reps/: CMakeLists.txt  pyG4Colour.cc  pyG4VisAttributes.cc  pymodG4graphics_reps.cc
source/intercoms/: CMakeLists.txt  pyG4UIcommand.cc  pyG4UIcommandTree.cc  pyG4UImanager.cc  pyG4UIparameter.cc  pymodG4intercoms.cc
source/interface/: CMakeLists.txt  pyG4UIterminal.cc  pymodG4interface.cc
source/materials/: CMakeLists.txt  pyG4AtomicShells.cc  pyG4Element.cc  pyG4Isotope.cc  pyG4Material.cc  pyG4NistManager.cc  pymodG4materials.cc
source/particles/: CMakeLists.txt  pyG4DynamicParticle.cc  pyG4IonTable.cc  pyG4ParticleDefinition.cc  pyG4ParticleList.cc  pyG4ParticleTable.cc  pyG4PrimaryParticle.cc  pyG4PrimaryVertex.cc  pymodG4particles.cc
source/physics_lists/: CMakeLists.txt  pyG4PhysListFactory.cc  pyPhysicsLists.cc  pymodG4physicslists.cc
source/processes/: CMakeLists.txt  pyG4EmCalculator.cc  pyG4MaterialCutsCouple.cc  pyG4ProcessManager.cc  pyG4ProcessTable.cc  pyG4ProcessType.cc  pyG4ProductionCuts.cc  pyG4ProductionCutsTable.cc  pyG4VProcess.cc  pymodG4processes.cc
source/python/: CMakeLists.txt  __init__.py  colortable.py  g4thread.py  g4viscp.py  hepunit.py
source/run/: CMakeLists.txt  pyG4Run.cc  pyG4RunManager.cc  pyG4UserRunAction.cc  pyG4VModularPhysicsList.cc  pyG4VUserActionInitialization.cc  pyG4VUserDetectorConstruction.cc  pyG4VUserPhysicsList.cc  pyG4VUserPrimaryGeneratorAction.cc  pymodG4run.cc
source/track/: CMakeLists.txt  pyG4Step.cc  pyG4StepPoint.cc  pyG4StepStatus.cc  pyG4Track.cc  pyG4TrackStatus.cc  pymodG4track.cc
source/tracking/: CMakeLists.txt  pyG4TrackingManager.cc  pyG4UserSteppingAction.cc  pyG4UserTrackingAction.cc  pymodG4tracking.cc
source/utils/: CMakeLists.txt  __init__.py  colortable.py  emcalculator.py  eventcounter.cc  g4viscp.py  gps.cc  medicalbeam.cc  medicalbeam.h  particlegun.cc  pymod_utils.cc  simplebox.cc  water_phantom.cc
source/visualization/: CMakeLists.txt  pyG4OpenGLX.cc  pyG4VisDrivers.cc  pyG4VisManager.cc  pymodG4visualization.cc
tests/gtest01/: CMakeLists.txt  run.py  test.py  tests.py  vis.mac  write_gdml.py
tests/gtest01/ecalgeom/: ecalgeom.cc  ecalgeom.h
tests/gtest02/: CMakeLists.txt  mksolids.py
tests/gtest03/: CMakeLists.txt  ecalgeom.gdml  read_gdml.py
