# - add module components

add_subdirectory(intercoms)
add_subdirectory(interface)
add_subdirectory(global)
add_subdirectory(python)
add_subdirectory(run)
#add_subdirectory(event)
#add_subdirectory(tracking)
#add_subdirectory(track)
#add_subdirectory(geometry)
#add_subdirectory(materials)
#add_subdirectory(particles)
#add_subdirectory(processes)
#add_subdirectory(digits_hits)
#add_subdirectory(visualization)
#add_subdirectory(graphics_reps)
#add_subdirectory(physics_lists)
#add_subdirectory(gdml)
