# - submodules
add_subdirectory(digits_hits)
add_subdirectory(event)
add_subdirectory(gdml)
add_subdirectory(geometry)
add_subdirectory(global)
add_subdirectory(graphics_reps)
add_subdirectory(intercoms)
add_subdirectory(interface)
add_subdirectory(materials)
add_subdirectory(particles)
add_subdirectory(physics_lists)
add_subdirectory(processes)
add_subdirectory(run)
add_subdirectory(track)
add_subdirectory(tracking)
add_subdirectory(visualization)
add_subdirectory(utils)
add_subdirectory(python)
